# claude-code-assistant

./: .gitignore  README.md  config.example.json  daemon.py  install.sh  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/commands/: setup.md
claude_assistant/: __init__.py  daemon.py
docs/: ARCHITECTURE.md  MCP_INTEGRATIONS.md  USER_GUIDE.md
docs/examples/: CLAUDE.md  CORE.md  USER.md
mcps/: google-workspace.json  hubspot.json  manychat.json  notion.json  puppeteer.json  slack.json  whatsapp.json
setup_wizard/: __init__.py  mcp_installer.py  profile_builder.py  service_installer.py  telegram_guide.py  wizard.py
setup_wizard/templates/: BOOTSTRAP.md  HEARTBEAT.md  PROFILE_TEMPLATE.md  __init__.py
